2004-04-13  Scott Goodwin  <scott@scottg.net>

      * x509.c: Added x509.c to hold certificate management functions.

2004-04-09  Scott Goodwin  <scott@scottg.net>

      * All: Lot's of cleanup, deleting old comments, restructing some code.

      * nsopenssl.h, ssl.c: Merged NsOpenSSLConnSend, NsOpenSSLConnRecv and
      NsOpenSSLConnHandshake into one function, NsOpenSSLConnOp.

      * defaults.h, nsopenssl.h: Pulled default defines out of nsopenssl.h and
      into separate defaults.h file.

      * nsopenssl.h, ssl.c: Added DEBUG_NSOPENSSL define: uncomment it to dump
      more info to log; comment out for production runs.  Recompilation
      necessary.

      * sslcontext: fixed SSLContextCacheInit to take into account the
      context's server / client role.

2004-04-04  Scott Goodwin  <scott@scottg.net>

      * Tagged: 3_0beta19

      * nsopenssl.h, ssl.c, tclcmds.c, https.tcl: Cleaned up CreateTclChannel.
      This affects calls to ns_openssl_sockopen and friends: the number of
      list values is the same and so is there meaning, but list items 1 and 2
      are now the same socket descriptors where in the past they used to be
      separate, one for read and one for write. The benefits besides simpler C
      code are that your web server will use 1 less fd for each connection you
      make using nsopenssl's Tcl API.

      * ssl.c, tclcmds.c: Fixed fd leak when using nsopenssl Tcl API. Have to
      do a shutdown on the socket for both read/write sides, then ns_sockclose
      on the socket.

2004-03-27  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.c, tclcmds.c: Fixed fd leak where I wasn't properly cleaning
      up after ns_sockopen etc. Changes involved adding readchan and writechan
      to NsOpenSSLConn struct, unregistering and closing the sockets in
      ChanCloseProc. Thanks to Noah Robin (sitz@aol.net) for reporting the
      problem.

2004-03-12  Scott Goodwin  <scott@scottg.net>
