@@ -147,10 +147,15 @@ typedef struct NsOpenSSLConn {
     int                       timeout;
     int                       sendwait;
     int                       recvwait;
+    int                       type;      /* CORE or TCLAPI */
     struct timeval            timer;      /* for performance measurement */
     struct Ns_Driver         *driver;    /* the core sock driver this conn belongs to */
     struct NsOpenSSLDriver   *ssldriver; /* the SSL driver this conn belongs to */
-    Tcl_Channel               chan;
+
+    /* Tcl API use only */
+
+    //Tcl_Channel              *getschan;
+    //Tcl_Channel              *putschan;
 } NsOpenSSLConn;
 
 /*
